--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,14 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 find_package(fmt CONFIG REQUIRED)
-find_package(Curses REQUIRED)
-include_directories(${CURSES_INCLUDE_DIR})
+if(WIN32)
+  find_path(PDC_INCLUDES curses.h)
+  include_directories(${PDC_INCLUDES})
+  find_library(CURSES_LIBRARIES pdcurses REQUIRED)
+else()
+  find_package(Curses REQUIRED)
+  include_directories(${CURSES_INCLUDE_DIRS})
+endif()
 find_library(OPENVR_LIB openvr_api)
 
 set(protos_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/protos)
