--- a/.github/workflows/vs17.yml
+++ b/.github/workflows/vs17.yml
@@ -10,10 +10,8 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
-      - name: Set up CUDA
-        uses: nvidia/setup-cuda@v1
-        with:
-          cuda-version: 12.1
+      - name: Install CUDA
+        run: choco install -y cuda --version 12.1
       - name: Configure
         run: cmake -B build
       - name: Build Debug
