tried to fix github workflow yet again

--- a/.github/workflows/vs17.yml
+++ b/.github/workflows/vs17.yml
@@ -11,7 +11,9 @@ jobs:
           submodules: true
           fetch-depth: 0
       - name: Install CUDA
-        run: choco install -y cuda --version 12.1
+        run: |
+          Invoke-WebRequest -Uri "https://developer.download.nvidia.com/compute/cuda/12.1.1/local_installers/cuda_12.1.1_531.14_windows.exe" -OutFile "cuda_installer.exe"
+          Start-Process -Wait -FilePath "cuda_installer.exe" -ArgumentList "-s" 
       - name: Configure
         run: cmake -B build
       - name: Build Debug
