--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,17 @@ FodyWeavers.xsd
 build/
 .vscode/
 cmake-build-debug/
+CMakeCache.txt
+CMakeFiles
+vcpkg_installed
+*.vcxproj
+*.sln
+ALL_BUILD.vcxproj.filters
+version.vcxproj.filters
+ZERO_CHECK.vcxproj.filters
+PACKAGE.vcxproj.filters
+OpenVR-Dynamic-Resolution.vcxproj.filters
+INSTALL.vcxproj.filters
+CPackSourceConfig.cmake
+CPackConfig.cmake
+cmake_install.cmake
