--- a/.github/workflows/vs17.yml
+++ b/.github/workflows/vs17.yml
@@ -10,6 +10,10 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
+      - uses: Jimver/cuda-toolkit@v0.2.10
+        id: cuda-toolkit
+        with:
+          cuda: '12.1.0'
       - name: Configure
         run: cmake -B build
       - name: Build Debug
