--- a/settings.ini
+++ b/settings.ini
@@ -18,3 +18,6 @@ resDecreaseThreshold=88
 dataAverageSamples=14
 resetOnThreshold=1
 alwaysReproject=0
+vramTarget=80
+vramLimit=90
+vramMonitorEnabled=1
