--- a/settings.ini
+++ b/settings.ini
@@ -6,7 +6,7 @@ initialRes=100
 [Resolution change]
 minRes=80
 maxRes=500
-dataPullDelayMs=250
+dataPullDelayMs=200
 resChangeDelayMs=1600
 minGpuTimeThreshold=1.3
 resIncreaseMin=3
@@ -15,10 +15,12 @@ resIncreaseScale=60
 resDecreaseScale=90
 resIncreaseThreshold=80
 resDecreaseThreshold=88
-dataAverageSamples=14
+dataAverageSamples=17
 resetOnThreshold=1
 alwaysReproject=0
 vramTarget=80
 vramLimit=90
 vramMonitorEnabled=1
 vramOnlyMode=0
+preferReprojection=0
+ignoreCpuTime=0
