--- a/settings.ini
+++ b/settings.ini
@@ -4,11 +4,11 @@ minimizeOnStart=0
 initialRes=100
 
 [Resolution change]
-minRes=80
+minRes=85
 maxRes=500
 dataPullDelayMs=200
-resChangeDelayMs=1600
-minGpuTimeThreshold=1.3
+resChangeDelayMs=1700
+minCpuTimeThreshold=1.0
 resIncreaseMin=3
 resDecreaseMin=9
 resIncreaseScale=60
