cleanups, minimize, no resize and set resolution to Custom

--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -1,9 +1,9 @@
 [Initialization]
 autoStart=1
 minimizeOnStart=0
-initialRes=100
 
-[Resolution change]
+[Resolution]
+initialRes=100
 minRes=80
 maxRes=500
 dataPullDelayMs=200
@@ -24,4 +24,4 @@ vramMonitorEnabled=1
 vramOnlyMode=0
 preferReprojection=0
 ignoreCpuTime=0
-disabledApps=
+disabledApps=steam.app.620981
