Refactor settings finish them!

--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -1,26 +1,36 @@
-[Initialization]
+[Startup]
 autoStart = 1
 minimizeOnStart = 0
+
+
+[General]
+resChangeDelayMs = 1800
+dataAverageSamples = 128
+disabledApps = steam.app.620980
+
 
 [Resolution]
 initialRes = 100
 minRes = 75
 maxRes = 350
-resChangeDelayMs = 1800
-dataAverageSamples = 128
+resIncreaseThreshold = 80
+resDecreaseThreshold = 88
 resIncreaseMin = 3
 resDecreaseMin = 8
 resIncreaseScale = 60
 resDecreaseScale = 90
-resIncreaseThreshold = 80
-resDecreaseThreshold = 88
 minCpuTimeThreshold = 0.600000
 resetOnThreshold = 1
-ignoreCpuTime = 0
-preferReprojection = 0
+
+
+[Reprojection]
 alwaysReproject = 0
-vramTarget = 80
-vramLimit = 90
+preferReprojection = 0
+ignoreCpuTime = 0
+
+
+[VRAM]
 vramMonitorEnabled = 1
 vramOnlyMode = 0
-disabledApps = steam.app.620980 
+vramTarget = 80
+vramLimit = 90
