Simplify dependencies by only using CPM
Co-Authored-By: Daniel Lemire <daniel@lemire.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,56 @@ cmake_minimum_required(VERSION 3.28)
 
 project(OVR-Dynamic-Resolution)
 
-include("${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")
+include(cmake/CPM.cmake)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 ## Find dependencies
 find_package(Threads REQUIRED)
-find_package(fmt CONFIG REQUIRED)
-find_library(OPENVR_LIB openvr_api)
-find_package(glfw3 REQUIRED)
-find_package(imgui REQUIRED)
-set(protos_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/protos)
-file(MAKE_DIRECTORY "${protos_OUTPUT_DIR}")
 
-include_directories(include)
+#CPMAddPackage("gh:ValveSoftware/openvr#v2.5.1")
+CPMAddPackage(
+  NAME openvr 
+  VERSION 2.5.1
+  GITHUB_REPOSITORY ValveSoftware/openvr
+  DOWNLOAD_ONLY TRUE
+)
+
+CPMAddPackage("gh:glfw/glfw#3.4")
+
+CPMAddPackage("gh:fmtlib/fmt#11.0.2")
+
+CPMAddPackage("gh:brofield/simpleini#v4.22")
+add_library(simpleini INTERFACE)
+target_include_directories(simpleini INTERFACE "${simpleini_SOURCE_DIR}")
+
+CPMAddPackage("gh:ocornut/imgui@1.91.2")
+add_library(imgui STATIC
+    ${imgui_SOURCE_DIR}/imgui.cpp
+    ${imgui_SOURCE_DIR}/imgui_demo.cpp
+    ${imgui_SOURCE_DIR}/imgui_draw.cpp
+    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
+    ${imgui_SOURCE_DIR}/imgui_tables.cpp
+    ${imgui_SOURCE_DIR}/misc/cpp/imgui_stdlib.cpp
+    ${imgui_SOURCE_DIR}/backends/imgui_impl_glfw.cpp
+    ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
+)
+target_link_libraries(imgui PUBLIC glfw)
+target_include_directories(imgui PUBLIC "${imgui_SOURCE_DIR}")
+target_include_directories(imgui PUBLIC "${imgui_SOURCE_DIR}/backends")
+
+CPMAddPackage(
+    NAME lodepng
+    URL https://github.com/lvandeve/lodepng/archive/ed3c5f14b136c936d615ee3b38aaa7e7e642f12c.zip
+)
+add_library(lodepng STATIC "${lodepng_SOURCE_DIR}/lodepng.cpp")
+target_include_directories(lodepng PUBLIC  "${lodepng_SOURCE_DIR}")
+
+CPMAddPackage(
+    NAME tray
+    URL https://github.com/Soundux/traypp/archive/698db7d58dd450cc9e30dc12d3bd0c5ca4d6a5b1.zip
+)
+link_libraries(tray)
 
 set(CMAKE_SKIP_BUILD_RPATH  FALSE)
 set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
@@ -31,11 +67,15 @@ IF (APPLE)
 SET(GUI_TYPE MACOSX_BUNDLE)
 ENDIF (APPLE)
 
-add_subdirectory(traypp EXCLUDE_FROM_ALL)
-link_libraries(tray)
-add_executable("${PROJECT_NAME}" ${GUI_TYPE} "src/main.cpp" "src/pathtools_excerpt.cpp" "src/setup.cpp" "src/lodepng.cpp")
-target_link_libraries("${PROJECT_NAME}" PRIVATE "${OPENVR_LIB}" fmt::fmt-header-only glfw imgui::imgui Threads::Threads)
-target_include_directories("${PROJECT_NAME}" PUBLIC ${protos_OUTPUT_DIR} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+if (WIN32)
+  link_directories("${openvr_SOURCE_DIR}/lib/win64")
+elseif(UNIX)
+  link_directories("${openvr_SOURCE_DIR}/lib/linux64")
+endif()
+
+add_executable("${PROJECT_NAME}" ${GUI_TYPE} "src/main.cpp" "src/pathtools_excerpt.cpp" "src/setup.cpp")
+target_link_libraries("${PROJECT_NAME}" openvr_api fmt::fmt-header-only simpleini imgui lodepng tray Threads::Threads)
+target_include_directories("${PROJECT_NAME}" PRIVATE ${CMAKE_CURRENT_BINARY_DIR} PUBLIC "${openvr_SOURCE_DIR}/headers")
 target_compile_features("${PROJECT_NAME}" PRIVATE cxx_std_17)
 
 # IDE Config
@@ -54,14 +94,6 @@ add_dependencies("${PROJECT_NAME}" version)
 install(FILES "${PROJECT_SOURCE_DIR}/manifest.vrmanifest"
     DESTINATION "."
 )
-
-if (WIN32)
-  set(VCPKG_BINARIES "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-windows/bin")
-  install(FILES "${VCPKG_BINARIES}/openvr_api.dll" DESTINATION ".")
-elseif(UNIX)
-    set(VCPKG_BINARIES "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-linux/bin")
-    install(FILES "${VCPKG_BINARIES}/libopenvr_api.so" DESTINATION ".")
-endif()
 
 install(TARGETS "${PROJECT_NAME}"
     RUNTIME
@@ -84,3 +116,13 @@ set(CPACK_GENERATOR "ZIP")
 set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY ON)
 set(CPACK_VERBATIM_VARIABLES YES)
 include(CPack)
+
+# Copy files
+set(RELEASE_FILES_DIR ${CMAKE_SOURCE_DIR}/ReleaseFiles)
+file(MAKE_DIRECTORY ${RELEASE_FILES_DIR})
+if (WIN32)
+  file(GLOB APP_RESOURCES "${CMAKE_SOURCE_DIR}/resources/*")
+  file(COPY ${openvr_SOURCE_DIR}/bin/win64/openvr_api.dll ${CMAKE_CURRENT_BINARY_DIR}/Release/OVR-Dynamic-Resolution.exe ${APP_RESOURCES} DESTINATION ${RELEASE_FILES_DIR})
+elseif(UNIX)
+  file(COPY ${openvr_SOURCE_DIR}/bin/linux64/openvr_api.dll ${APP_RESOURCES} DESTINATION ${RELEASE_FILES_DIR})
+endif()
