Add a GUI and basically rewrite half of the code (#33)
* WIP migrate UI to ImGui

* OpenVR -> OVR

* cleanups, minimize, no resize and set resolution to Custom

* fix .ini categories and improve regions

* move some nvml stuff

* fix autostart and error handling

* Add saveSettings method and can write defaults + icon

* properly quit and cleanup with OpenVR

* add screenshot in readme, add lodepng license and clarify build steps

* Update icon.png

* display VRAM as GB and optimize getting it

* use openvr buffer

* settings wip

* Add tray icon

* reorder settings

* fix FPS going wild because of division by 0

* use int instead of float for configs

* code clarity + better nvml init

* prevent errors with config

* fix vram, fps and reprojection

* add missing configs in GUI

* Refactor settings finish them!

* Add Traypp license

* fix res change scales and defaults

* tray show instead of open

* Update screenshot.png

* fix resolution capitalization

* Apply most suggestions from Daniel

Co-Authored-By: Daniel Lemire <daniel@lemire.me>

* Simplify dependencies by only using CPM

Co-Authored-By: Daniel Lemire <daniel@lemire.me>

* Delete FindOpenVR.cmake

Co-Authored-By: Daniel Lemire <daniel@lemire.me>

* use another way to copy files so that it may not error

* Don't copy binary because CI doesn't like it

screw you CI

* Update .gitignore

* More portable!!! (#34)

* saving

* tweak

* various fixes

* various safety tricks

* trimming

* ok

* having fun

* cleanup regardless of tray

* check arguments

* formatting

---------

Co-authored-by: Daniel Lemire <dlemire@lemire.me>
Co-authored-by: Erimel <marioluigivideo@gmail.com>

* give printLine window a name

* silently restore settings

* Remove auto-start confirmation (non-error) message

* Update README.md

* improve default config

* update manifest

* add buttons to pause adjustment and disa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,123 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.16)
 
-project(OpenVR-Dynamic-Resolution)
+project(OVR-Dynamic-Resolution)
+set(CMAKE_CXX_STANDARD 17)
 
-include("${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")
+include(cmake/CPM.cmake)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-find_package(fmt CONFIG REQUIRED)
-if(WIN32)
-  find_path(PDC_INCLUDES curses.h)
-  include_directories(${PDC_INCLUDES})
-  find_library(CURSES_LIBRARIES pdcurses REQUIRED)
-else()
-  find_package(Curses REQUIRED)
-  include_directories(${CURSES_INCLUDE_DIRS})
+## Find dependencies
+find_package(Threads REQUIRED)
+
+if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+  message(STATUS "Under Linux, you may need to add some dependencies.")
+  message(STATUS "Ubuntu users should try:")
+  message(STATUS "apt-get install libwayland-dev libxrandr-dev libxkbcommon-x11-dev libxinerama-dev libxcursor-dev libxi-dev  libglu1-mesa-dev freeglut3-dev mesa-common-dev")
 endif()
-find_library(OPENVR_LIB openvr_api)
 
-set(protos_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/protos)
-file(MAKE_DIRECTORY "${protos_OUTPUT_DIR}")
 
-include_directories(include)
+IF(WIN32)
+  set(OPENVR_SHARED ON)
+ELSE()
+  set(OPENVR_SHARED OFF)
+ENDIF()
+CPMAddPackage(
+  NAME openvr 
+  URL https://github.com/ValveSoftware/openvr/archive/refs/tags/v2.5.1.zip
+  OPTIONS "BUILD_SHARED ${OPENVR_SHARED}"
+)
+
+get_directory_property(OPENVR_LIBNAME
+    DIRECTORY ${openvr_SOURCE_DIR}
+    DEFINITION LIBNAME)
+
+get_directory_property(OPENVR_PLATFORM_NAME
+    DIRECTORY ${openvr_SOURCE_DIR}
+    DEFINITION PLATFORM_NAME)
+get_directory_property(OPENVR_PROCESSOR_ARCH
+    DIRECTORY ${openvr_SOURCE_DIR}
+    DEFINITION PROCESSOR_ARCH)
+get_directory_property(OPENVR_CMAKE_LIBRARY_OUTPUT_DIRECTORY
+    DIRECTORY ${openvr_SOURCE_DIR}
+    DEFINITION CMAKE_LIBRARY_OUTPUT_DIRECTORY)
+
+message(STATUS "OpenVR detected your system as ${OPENVR_PLATFORM_NAME}${OPENVR_PROCESSOR_ARCH}")
+
+if(EXISTS "${OPENVR_CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
+   message(STATUS "Recovering OpenVR library from ${OPENVR_CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
+else()
+   message(WARNING "Can't find OpenVR library at ${OPENVR_CMAKE_LIBRARY_OUTPUT_DIRECTORY} Is your system supported?")
+endif()
+
+CPMAddPackage("gh:glfw/glfw#3.4")
+
+CPMAddPackage("gh:fmtlib/fmt#11.0.2")
+
+CPMAddPackage("gh:brofield/simpleini#v4.22")
+add_library(simpleini INTERFACE)
+target_include_directories(simpleini INTERFACE "${simpleini_SOURCE_DIR}")
+
+CPMAddPackage("gh:ocornut/imgui@1.91.2")
+add_library(imgui STATIC
+    ${imgui_SOURCE_DIR}/imgui.cpp
+    ${imgui_SOURCE_DIR}/imgui_demo.cpp
+    ${imgui_SOURCE_DIR}/imgui_draw.cpp
+    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
+    ${imgui_SOURCE_DIR}/imgui_tables.cpp
+    ${imgui_SOURCE_DIR}/misc/cpp/imgui_stdlib.cpp
+    ${imgui_SOURCE_DIR}/backends/imgui_impl_glfw.cpp
+    ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
+)
+target_link_libraries(imgui PUBLIC glfw)
+target_include_directories(imgui PUBLIC "${imgui_SOURCE_DIR}")
+target_include_directories(imgui PUBLIC "${imgui_SOURCE_DIR}/backends")
+
+CPMAddPackage(
+    NAME lodepng
+    URL https://github.com/lvandeve/lodepng/archive/ed3c5f14b136c936d615ee3b38aaa7e7e642f12c.zip
+)
+add_library(lodepng STATIC "${lodepng_SOURCE_DIR}/lodepng.cpp")
+target_include_directories(lodepng PUBLIC  "${lodepng_SOURCE_DIR}")
+
+IF(WIN32)
+CPMAddPackage(
+    NAME tray
+    URL https://github.com/Soundux/traypp/archive/698db7d58dd450cc9e30dc12d3bd0c5ca4d6a5b1.zip
+)
+ENDIF()
 
 set(CMAKE_SKIP_BUILD_RPATH  FALSE)
 set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 set(CMAKE_INSTALL_RPATH $ORIGIN)
 
 # Project
-add_executable("${PROJECT_NAME}" "src/main.cpp" "src/pathtools_excerpt.cpp" "src/setup.cpp")
-target_link_libraries("${PROJECT_NAME}" PRIVATE "${OPENVR_LIB}" fmt::fmt-header-only ${CURSES_LIBRARIES})
-target_include_directories("${PROJECT_NAME}" PUBLIC ${protos_OUTPUT_DIR} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+# Set some Win32 Specific Settings
+IF(WIN32)
+SET(GUI_TYPE WIN32)
+ENDIF(WIN32)
+# Set some Apple MacOS Specific settings
+IF (APPLE)
+SET(GUI_TYPE MACOSX_BUNDLE)
+ENDIF (APPLE)
+
+link_directories("${openvr_SOURCE_DIR}/lib/${OPENVR_PLATFORM_NAME}${OPENVR_PROCESSOR_ARCH}")
+
+if(WIN32)
+link_directories("${OPENVR_CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
+endif()
+if(WIN32)
+add_executable("${PROJECT_NAME}" ${GUI_TYPE} "src/main.cpp" "src/pathtools_excerpt.cpp" "src/setup.cpp")
+else()
+add_executable("${PROJECT_NAME}" ${GUI_TYPE} "src/main.cpp" "src/setup.cpp")
+endif()
+
+target_link_libraries("${PROJECT_NAME}" openvr_api fmt::fmt-header-only simpleini imgui lodepng Threads::Threads)
+if(TARGET tray)
+  target_link_libraries("${PROJECT_NAME}" tray)
+endif()
+
+target_include_directories("${PROJECT_NAME}" PRIVATE ${CMAKE_CURRENT_BINARY_DIR} PUBLIC "${openvr_SOURCE_DIR}/headers")
 target_compile_features("${PROJECT_NAME}" PRIVATE cxx_std_17)
 
 # IDE Config
@@ -45,21 +133,10 @@ add_custom_target(
 )
 add_dependencies("${PROJECT_NAME}" version)
 
-install(FILES "${PROJECT_SOURCE_DIR}/manifest.vrmanifest"
-    DESTINATION "."
-)
-
-if (WIN32)
-  set(VCPKG_BINARIES "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-windows/bin")
-  install(FILES "${VCPKG_BINARIES}/openvr_api.dll" DESTINATION ".")
-elseif(UNIX)
-    set(VCPKG_BINARIES "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-linux/bin")
-    install(FILES "${VCPKG_BINARIES}/libopenvr_api.so" DESTINATION ".")
-endif()
-
 install(TARGETS "${PROJECT_NAME}"
     RUNTIME
     DESTINATION .
+    BUNDLE DESTINATION ${CMAKE_SOURCE_DIR}
 )
 
 set(CPACK_SYSTEM_NAME ${CMAKE_SYSTEM_NAME})
@@ -78,3 +155,27 @@ set(CPACK_GENERATOR "ZIP")
 set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY ON)
 set(CPACK_VERBATIM_VARIABLES YES)
 include(CPack)
+
+if(${OPENVR_PLATFORM_NAME}$ MATCHES "win.*")
+  set(OPENVR_DLL_NAME "openvr_api.dll")
+elseif(${OPENVR_PLATFORM_NAME}$ MATCHES "osx.*")
+  set(OPENVR_DLL_NAME "libopenvr_api.dylib")
+else()
+  set(OPENVR_DLL_NAME "libopenvr_api.so")
+endif()
+
+
+if(WIN32)
+    # Visual Studio
+    set(ACTUAL_CURRENT_BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/Release)
+else()
+    set(ACTUAL_CURRENT_BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR})
+endif()
+file(MAKE_DIRECTORY ${ACTUAL_CURRENT_BINARY_DIR}) # make sure it always exists
+# Copy files
+file(GLOB APP_RESOURCES "${CMAKE_SOURCE_DIR}/resources/*")
+if(EXISTS ${OPENVR_CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${OPENVR_DLL_NAME})
+  file(COPY ${OPENVR_CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${OPENVR_DLL_NAME} ${APP_RESOURCES} DESTINATION ${ACTUAL_CURRENT_BINARY_DIR})
+else()
+  file(COPY ${APP_RESOURCES} DESTINATION ${ACTUAL_CURRENT_BINARY_DIR})
+endif()
